# TensorForge

./: CMakeLists.txt  README.md  SPEC.md  main.cpp
benchmarks/: bench_matmul.cpp
examples/: basic.tir  tiled.tir
src/: ast.h  codegen.cpp  codegen.h  jit.cpp  jit.h  lexer.cpp  lexer.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h
tests/: test_codegen.cpp  test_lexer.cpp  test_parser.cpp
